# sample-bedrock-proxy-gateway

./: .checkov.yaml  .env.template  .gitignore  .pre-commit-config.yaml  .terraform-docs.yaml  LICENSE  README.md  pyproject.toml
backend/app/: .env.template  Dockerfile  OtelDockerfile  README.md  __init__.py  config.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml
backend/app/core/: __init__.py
backend/app/core/auth/: __init__.py  jwks.py  jwt_validator.py
backend/app/core/cache/: __init__.py  exceptions.py  memory_cache.py
backend/app/core/rate_limit/: __init__.py  engine.py  limiter.py  tokens.py  usecase_quota_checker.py  validate_config.py
backend/app/core/rate_limit/config/: base.yaml  dev.yaml  schema.json  test.yaml
backend/app/middleware/: __init__.py  auth.py  guardrail.py  logging.py  rate_limit.py  trace.py
backend/app/observability/: __init__.py  context_logger.py  context_vars.py  guardrail_metrics.py  guardrail_tracing.py  metrics.py  rate_limit_metrics.py  rate_limit_tracing.py  telemetry.py
backend/app/routes/: __init__.py  bedrock_routes.py  general_routes.py  health.py  operational_routes.py
backend/app/services/: __init__.py  bedrock_service.py  guardrail_service.py  valkey_service.py
backend/app/util/: aws_error_response.py  constants.py  exception_handler.py  rate_limit_types.py  ssm_client.py
docs/: LOCAL_CONFIG_PATTERN.md
docs/gateway/: QUICKSTART.md  README.md  TROUBLESHOOTING.md
docs/gateway/01-setup/: 01-prerequisites.md  02-deployment.md  03-oauth.md  04-rate-limiting.md  05-multi-account.md  06-environment-variables.md  07-advanced.md
docs/gateway/02-usage/: 01-authentication.md  02-making-requests.md  03-code-examples.md
docs/gateway/03-architecture/: 01-overview.md  02-request-flow.md  03-networking.md  04-operations.md  05-development.md  README.md
examples/: 00_onboarding.ipynb  01_fundamentals.ipynb  03_embedding.ipynb  04_rag.ipynb  05_thinking_and_tools.ipynb  06_image_gen.ipynb  06_rate_limit.ipynb  07_guardrail.ipynb  08_operations.ipynb
infrastructure/: README.md  backend-dev.tfbackend  backend-test.tfbackend  dev.tfvars  locals.tf  main.tf  output.tf  providers.tf  setup.sh  test.tfvars  variables.tf
infrastructure/central/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
infrastructure/central_account/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/central_account/bedrock_guardrails/: main.tf  outputs.tf  variables.tf
infrastructure/central_account/caching/: kms.tf  locals.tf  (+3 more)
infrastructure/consolidation/: README.md  locals.tf  main.tf  providers.tf  variables.tf
infrastructure/guardrail_consolidation/: main.tf  outputs.tf  variables.tf
infrastructure/shared/: README.md  data.tf  locals.tf  main.tf  providers.tf  variables.tf
infrastructure/shared_account/: README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: README.md  cleanup.sh  deploy.sh  destroy.sh  setup.sh
test/integration/: README.md  config.json  run_java_tests.sh  run_python_tests.sh
test/load/: locust.py  run_load_tests_with_tags.sh
test/unit/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.sh  test_additional_coverage.py  test_config.py  test_main.py  test_telemetry_mock.py
(+149 files in other folders)
