[project]
name = "bedrock-proxy-gateway"
version = "0.1.0"
description = "Monorepo root"
requires-python = ">=3.12,<3.14"
dependencies = [
    "app",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure as workspace root with no source code
# Bit of a hack because we don't have a package in the root.
# Could also use --no-install-package flag but this would add
# complexities in running code in subpackages
[tool.hatch.build.targets.wheel]
packages = ["no_src"]

# Define the workspace
[tool.uv.workspace]
members = ["backend/*"]

[tool.uv.sources]
app = { workspace = true }

# Ruff configuration
[tool.ruff]
line-length = 99
target-version = "py312"  # Match your Python requirement
exclude = [
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "D",      # pydocstyle
]
ignore = ["E501", "D203", "D213", "D413", "D107", "D400"]


[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["test"]  # Point to your actual test directory
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    # Testing tools
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "pytest-env>=1.1.5",
    # Code quality
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "mypy>=1.17.1",
    "mypy-boto3-builder>=8.11.0",
    "types-requests>=2.32.4.20250809",
    # Integration testing
    "langchain-aws>=0.2.31",
    "langgraph>=0.6.6",
    "litellm>=1.76.1",
    "strands-agents>=1.0.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
    "pyyaml>=6.0.2",
]
